--- a/app-package.json
+++ b/app-package.json
@@ -17,13 +17,26 @@
     "* Ressourcen: Jedes Formular kann untereinander im JSON angelegt werden. ",
     "Jedes Formular wird in einer Liste zur auswahl angezeigt."
   ],
-  "screenshots": ["docs/Desktop_Screenshot", "docs/Mobile_Screenshot"],
+  "screenshots": [
+    "/assets/Desktop_Screenshot.png",
+    "/assets/Mobile_Screenshot.png"
+  ],
   "apiVersion": "1",
   "instanz-config": {
     "seitentitel": {
       "label": "Seitentitel",
       "hilfe": "Der Seitentitel wird im Browser-Tab der App angezeigt",
       "default": "Formular",
+      "format": {
+        "typ": "string",
+        "laenge": 50
+      },
+      "erforderlich": "ja"
+    },
+    "lizenz": {
+      "label": "Lizenz",
+      "hilfe": "Hier muss der Lizenzkey eingetragen werden.",
+      "default": "",
       "format": {
         "typ": "string",
         "laenge": 50
