--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,7 @@
 events { }
 
 http {
+    include    mime.types;
     server {
         listen 80;
         server_name localhost;
@@ -14,7 +15,7 @@ http {
             alias /usr/share/nginx/html/odas-config/;
         }
 
-        add_header Access-Control-Allow-Origin *;
-        add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
+        #add_header Access-Control-Allow-Origin *;
+        #add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
     }
 }
