--- a/app-package.json
+++ b/app-package.json
@@ -1,21 +1,21 @@
 {
   "app-entwickler": "12343",
-  "app-entwickler-name": "mueller-gmbh",
-  "name-in-url": "Formular",
-  "name": "Formular",
+  "app-entwickler-name": "ondics-gmbh",
+  "name-in-url": "Generic",
+  "name": "Generic",
   "version": "1.0.0",
   "odas-app-icon": "assets/odas-app-icon.png",
   "app-icon": "assets/app-icon.png",
   "kurzbeschreibung": "",
   "beschreibung": [
-    "Die App zeigt eine Formularauswahl an mit ",
-    "den jeweils definierten Formularen. Die Daten werden aus einem Open ",
-    "Data Portal bezogen und müssen in Form von einer JSON-Datei vorliegen. ",
+    "Die App zeigt eine generische App an mit ",
+    "den jeweils definierten Config Daten. Die Daten werden aus einem Open ",
+    "Data Portal bezogen oder werden lokal von einem Preset bezogen. ",
     "Die Daten müssen in einem Open Data Portal ",
     "wie folgt aufgebaut sein: \n",
-    "* Datensatz: JSON Datei mit allen enthaltenen Formularen",
-    "* Ressourcen: Jedes Formular kann untereinander im JSON angelegt werden. ",
-    "Jedes Formular wird in einer Liste zur auswahl angezeigt."
+    "* Datensatz: ",
+    "* Ressourcen: ",
+    ""
   ],
   "screenshots": [
     "/assets/Desktop_Screenshot.png",
@@ -26,7 +26,7 @@
     "seitentitel": {
       "label": "Seitentitel",
       "hilfe": "Der Seitentitel wird im Browser-Tab der App angezeigt",
-      "default": "Formular",
+      "default": "Generic",
       "format": {
         "typ": "string",
         "laenge": 50
@@ -46,7 +46,7 @@
     "titel": {
       "label": "Titel",
       "hilfe": "Der Titel wird in der Titelzeile der App angezeigt",
-      "default": "Städtischer Formularschrank",
+      "default": "Generic App",
       "format": {
         "typ": "string",
         "laenge": 50
@@ -78,7 +78,7 @@
       "format": {
         "typ": "html"
       },
-      "default": "Die Formular-App zeigt die jeweils definierten Formulare.\n Diese besitzen Standardformate wie Textformular oder Bestätigungsformular.\nDie Daten werden tagesaktuell gehalten. Bei Änderungen versuchen wir, den Datenbestend immer sofort zu aktualisieren. \n##App-Anbieter\nDie App wird bereit gestellt von <a href=\"{{anbieter.url}}\"><{{anbieter.name}}>\nDie Daten kommen aus  unserem Open Data Portal <a href=\"{{odp.url}}\"><{{odp.name}}> geladen\n##Datenquelle\nDie Datenquelle ist in unserem Open Data Portal <a href=\"{{appinstanz.datensatz-url}}\"><{{appinstanz.datensatz-name}}> geladen.\n## App-Entwickler\n Die App wurde entwickelt von <a href=\"{{app.developer-url}}\"><{{app.developer-name}}>. App-Version: {{app.version}}.\n## Open Data App Store\nDer Open Data App Store betrieben von <a href=\"{{odas.betreiber.url}}\"><{{odas.betreiber.name}}>\n",
+      "default": "Die Generic-App zeigt die jeweils definierten Configs.\nDie Daten werden tagesaktuell gehalten. Bei Änderungen versuchen wir, den Datenbestend immer sofort zu aktualisieren. \n##App-Anbieter\nDie App wird bereit gestellt von <a href=\"{{anbieter.url}}\"><{{anbieter.name}}>\nDie Daten kommen aus  unserem Open Data Portal <a href=\"{{odp.url}}\"><{{odp.name}}> geladen\n##Datenquelle\nDie Datenquelle ist in unserem Open Data Portal <a href=\"{{appinstanz.datensatz-url}}\"><{{appinstanz.datensatz-name}}> geladen.\n## App-Entwickler\n Die App wurde entwickelt von <a href=\"{{app.developer-url}}\"><{{app.developer-name}}>. App-Version: {{app.version}}.\n## Open Data App Store\nDer Open Data App Store betrieben von <a href=\"{{odas.betreiber.url}}\"><{{odas.betreiber.name}}>\n",
       "erforderlich": "ja"
     },
     "impressum": {
@@ -101,12 +101,12 @@
     },
     "urlDaten": {
       "label": "URL zum Datensatz im ODP",
-      "hilfe": "Der Datensatz im Open Data Portal mit den JSON-Einzeldateien des Formularschranks",
+      "hilfe": "Der Datensatz im Open Data Portal mit den Daten der Generic App",
       "format": {
         "typ": "url"
       },
       "default": "{{appconfig.datensatz-url}}",
-      "beispiel": "https://open-data-musterstadt.ckan.de/dataset/formulare",
+      "beispiel": "",
       "erforderlich": "ja"
     },
     "fusszeile": {
@@ -121,12 +121,12 @@
     },
     "apiUrl": {
       "label": "URL zur Datensatz-API",
-      "hilfe": "Von dieser API-URL zum Datensatz werden die Ressoucen bezogen (JSON)",
+      "hilfe": "Von dieser API-URL zum Datensatz werden die Ressoucen bezogen",
       "format": {
         "typ": "url"
       },
       "default": "{{appconfig.datensatz-apiurl}}",
-      "beispiel": "https://open-data-musterstadt.ckan.de/dataset/8e798e62-1613-4975-b3b1-f57e1ff25371/resource/6d202584-eace-4153-be5a-db92da8e40f9/download/formular_multitemplate.json",
+      "beispiel": "",
       "erforderlich": "ja"
     },
     "sprache": {
